# rsmpi-rt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: docs.yml  interop.yml  test.yaml
derive-test/: Cargo.toml
docs/: architecture.md  backend-comparison.md  codegen.md  mpiabi-dynamic-loading.md
examples/: interop_test.rs
mpi-rt-sys/: Cargo.toml
mpi-rt-sys/src/: functions.rs  lib.rs  loader.rs
mpi-sys/src/: constant_accessors.rs  lib.rs
mpitrampoline-sys/: Cargo.toml
mpitrampoline-sys/src/: callback_types.rs  constants.rs  functions.rs  lib.rs  loader.rs  types.rs
src/: attribute.rs  backend.rs  collective.rs  datatype.rs  environment.rs  lib.rs  point_to_point.rs  request.rs
src/topology/: cartesian.rs  mod.rs  sealed.rs
tests/interop/: Project.toml  run_interop.sh  test_mpi4py.py  test_mpi_jl.jl
